--- a/os/Makefile
+++ b/os/Makefile
@@ -3,27 +3,32 @@
 # look for the file head
 # compile the file to assembly file
 
+DOCKER_NAME ?= rcore-tutorial-v3
 
 FILE := target/riscv64gc-unknown-none-elf/debug/os
 TARGET := riscv64gc-unknown-none-elf
-BIOS := ../bootloader/rustsbi-qemu.bin
+BIOS := bootloader/rustsbi-qemu.bin
+
+
+b:
+	@cargo build --target $(TARGET)
 
 # Rule to run cargo
 run:
 	@cargo run $(FILE)
-
-build:
-	@cargo build --target $(TARGET)
-
 format:
 	@file $(FILE)
 
-head:
+h:
 	@rust-readobj -h $(FILE)
 # Rule to run rust-objdump
-objdump:
+d:
 	@rust-objdump -S $(FILE)
-qemu:
+
+bin:
+	@rust-objcopy --binary-architecture=riscv64 $(FILE) \
+		--strip-all -O binary $(FILE).bin
+q:
 	# default memory 128M set by [-m 128M]    range[0x80000000, 0x88000000]
 	# default entry=0x80000000 fixed by Qemu, we can't change it
 	# set bootloader entry addr=0x80000000.
@@ -31,11 +36,30 @@ qemu:
 	# so we need to set the kernel entry addr=0x80200000
 	@echo "Running QEMU..."
 	@qemu-system-riscv64 -machine virt \
-		-bios $(BIOS) \
 		-nographic \
-		-device loader,file=$(FILE),addr=0x80300000
+		-bios $(BIOS) \
+		-device loader,file=$(FILE).bin,addr=0x80200000
 	#qemu-system-riscv64 $(FILE)
 	@echo "QEMU running. Press Ctrl+A, X to exit."
 
+qemu:
+	@qemu-riscv64 $(FILE)
+qemu-version:
+	@qemu-system-riscv64 --version
+	@qemu-riscv64 --version
+
+.PHONY: docker build_docker
+
+docker:
+	docker run --rm -it -v ${PWD}:/mnt -w /mnt ${DOCKER_NAME} bash
+
+build_docker:
+	docker build -t ${DOCKER_NAME} .
+
+fmt:
+	cd os ; cargo fmt;  cd ..
+
+
+
 # Default target
-all: build format head objdump
+all: b bin format h d
