--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -1,6 +1,9 @@
+cargo-features = ["edition2024"]
 [package]
 name = "os"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+[profile.release]
+debug = true
